Fixed Footer Text Size
Some footer text was too small in mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -985,7 +985,11 @@ button.btn{
   }
 
   .font-size-1-5-footer {
-    font-size: 4vw;
+    font-size: 5vw;
+  }
+
+  .font-size-1-2-footer {
+    font-size: 3.5vw;
   }
 
   .font-size-1-4 {
